# SpeculationLedger

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: __init__.py  plots.py
bench/loadgen/: README.md
bench/opencode/: opencode.template.jsonc  run_instance.sh
bench/swebench/: README.md  lite50.txt  make_lite50.py
configs/: g1_recurrence.yaml  g2_oracle.yaml  g3_hitrate.yaml  synth_smoke.yaml
core/: __init__.py  arena.py  backoff.py  signature.py  store.py  types.py
docs/: DECISIONS.md  ENV.md  HOOKS.md  PATCHES.md
research/: README.md
scripts/: normalize_golden.py  require_gpu.py
sim/: __init__.py  bench_d3.py  convert.py  dense_key.py  gates.py  proposers.py  replay.py  synth.py
tests/: test_arena_span.py  test_audit_reconciliation.py  test_backoff.py  test_convert.py  test_corner_cases.py  test_differential.py  test_i1_i2_online.py  test_i3_scope.py  test_i4_determinism.py  test_i5_purity.py  test_opt_corner_cases.py  test_perf_regression.py  test_proposers.py  test_replay.py  test_round2_corner_cases.py  test_signature.py  test_store.py
tests/golden/: synth_smoke_gates.json
vllm_plugin/: README.md  __init__.py
